tests/baselines/reference/alwaysStrict.errors.txt
tests/cases/compiler/alwaysStrict.ts(3,9): error TS1100: Invalid use of 'arguments' in strict mode.


==== tests/cases/compiler/alwaysStrict.ts (1 errors) ====
    
    function f() {
        var arguments = [];
            ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    }